[metadata]
name = dib-utils
summary = Pieces of diskimage-builder that are useful without the rest of the project
description-file =
    README.md
author = HP Cloud Services
author_email = openstack-dev@lists.openstack.org
license: Apache License (2.0)
home-page = https://git.openstack.org/cgit/openstack/dib-utils
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Environment :: Console

[files]
scripts =
    bin/dib-run-parts

[wheel]
universal = 1
